# MLTracking

./: .gitignore  CMakeLists.txt  build_dependencies.sh  setup_dependencies.sh  setup_env.sh  utilities.sh
.github/workflows/: key4hep-build.yaml  mucoll-ci.yml
